--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -87,49 +87,49 @@
   </ul>
 </details>
 
-<details>
+<details open>
   <summary><i class="fas fa-id-card"></i> Eligibility Requirements</summary>
   <ul>
     {% for item in page.eligibility-requirements %}<li>{{ item }}</li>{% endfor %}
   </ul>
 </details>
 
-<details>
+<details open>
   <summary><i class="fas fa-clock"></i> Clinical Hours</summary>
   <ul>
     {% for item in page.clinical-hours %}<li>{{ item }}</li>{% endfor %}
   </ul>
 </details>
 
-<details>
+<details open>
   <summary><i class="fas fa-laptop"></i> Exam Format and Duration</summary>
   <ul>
     {% for item in page.exam-format-and-duration %}<li>{{ item }}</li>{% endfor %}
   </ul>
 </details>
 
-<details>
+<details open>
   <summary><i class="fas fa-sync"></i> Renewal Cycle and Methods</summary>
   <ul>
     {% for item in page.renewal-cycle-and-methods %}<li>{{ item }}</li>{% endfor %}
   </ul>
 </details>
 
-<details>
+<details open>
   <summary><i class="fas fa-graduation-cap"></i> Continuing Education (CE) Requirements</summary>
   <ul>
     {% for line in page.ce-requirements %}<li>{{ line }}</li>{% endfor %}
   </ul>
 </details>
 
-<details>
+<details open>
   <summary><i class="fas fa-dollar-sign"></i> Fees</summary>
   <ul>
     {% for line in page.fees %}<li>{{ line }}</li>{% endfor %}
   </ul>
 </details>
 
-<details>
+<details open>
   <summary><i class="fas fa-calendar-check"></i> Key Deadlines</summary>
   <ul>
     {% for line in page.key-deadlines %}<li>{{ line }}</li>{% endfor %}
